syntax = "proto3";

package authproto;

option go_package = "authproto";

service AuthService {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {}
}

message User {
	string email = 2;
	string password = 3;
	string accountType = 4;
}

message CreateRequest {
	User user = 1;
}

message CreateResponse {
}

message UpdateRequest {
	User user = 1;
}

message UpdateResponse {
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {
}

message VerifyUserRequest {
	string email = 1;
	string password = 2;
}

message VerifyUserResponse {
	User user = 1;
}
